--- a/productos.html
+++ b/productos.html
@@ -84,7 +84,7 @@
   </section>
 
   <!-- GRID DE PRODUCTOS -->
-  <main class="container grid">
+  <main class="container product-grid">
     <article class="product-card reveal" data-category="alimento">
       <img src="images/producto1.jpg" alt="Producto 1" class="product-img">
       <h3>Alimento Orgánico</h3>
@@ -135,6 +135,6 @@
 
   <!-- Scripts -->
   <script src="js/js.js" defer></script>
-  <script src="js/productos.js" defer></script>
+  <script src="js/Productos.js" defer></script>
 </body>
 </html>
