--- a/Productos-detalles/Producto-D5.html
+++ b/Productos-detalles/Producto-D5.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EcoPetsCR — Alimento Orgánico</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/producto-detalle.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/producto-detalle.css">
 </head>
 <body>
 
@@ -146,6 +146,6 @@
   <p class="copyright">&copy; 2025 EcoPetsCR — Todos los derechos reservados</p>
 </footer>
 
-<script src="js/producto-detalle.js" defer></script>
+<script src="../js/producto-detalle.js" defer></script>
 </body>
 </html>
