--- a/Productos-detalles/Producto-D4.html
+++ b/Productos-detalles/Producto-D4.html
@@ -4,61 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EcoPetsCR — Alimento Orgánico</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/producto-detalle.css">
+  <link rel="stylesheet" href="../css/menu-hamburguesa.css">
 </head>
 <body>
 
 <header class="site-header" role="banner">
-  <div class="header-inner">                                             
-    <!-- Logo dentro de círculo blanco -->
+  <div class="header-inner">
     <a href="index.html" class="brand" aria-label="EcoPetsCR — Inicio">
       <span class="brand-circle" aria-hidden="true">
         <img src="images/logo.png" alt="Logo EcoPetsCR" class="brand-logo">
       </span>
-      <span class="sr-only">EcoPetsCR</span>
+      <span class="brand-text">EcoPetsCR</span>
     </a>
 
-    <!-- Navigation desktop -->
-    <nav class="main-nav" role="navigation" aria-label="Menú principal">
+    <nav class="main-nav" id="mainNav" role="navigation" aria-label="Menú principal">
       <ul class="nav-list">
-        <li><a class="nav-link" href="index.html#servicios">Servicios</a></li>
-        <li><a class="nav-link" href="index.html#nosotros">Nosotros</a></li>
-        <li><a class="nav-link" href="index.html#blog">Blog</a></li>
-        <li><a class="nav-link" href="index.html#contacto">Contacto</a></li>
+        <li><a class="nav-link" href="index.html">Inicio</a></li>
+        <li><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link" href="contacto.html">Contacto</a></li>
         <li><a class="nav-link" href="productos.html">Productos</a></li>
+        <li><a class="nav-link" href="faq.html">Preguntas Frecuentes</a></li>
+        <li><a class="nav-link" href="acerca-de.html">Acerca de</a></li>
       </ul>
     </nav>
 
-    <!-- Acciones (círculos) y CTA -->
-    <div class="header-actions">
-      <!-- Teléfono SVG igual al index -->
-      <a href="tel:+50688888888" class="action-circle" aria-label="Llamar a EcoPetsCR">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.86 19.86 0 0 1-8.63-3.13 19.5 19.5 0 0 1-6-6A19.86 19.86 0 0 1 2.08 4.18 2 2 0 0 1 4 2h3a1 1 0 0 1 1 .78c.12.84.33 1.65.62 2.42a1 1 0 0 1-.24 1.02L7.91 8.91a16 16 0 0 0 6 6l1.69-1.69a1 1 0 0 1 1.02-.24c.77.29 1.58.5 2.42.62A1 1 0 0 1 22 16.92z" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </a>
-
-      <a href="productos.html" class="btn-cta" id="cta-top">Conocer más</a>
-
-      <!-- Botón hamburguesa igual al index -->
-      <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
-        <span class="hamburger"></span>
-      </button>
-    </div>
-  </div>
-
-  <!-- Mobile nav (overlay) -->
-  <div class="mobile-nav" id="mobileNav" aria-hidden="true">
-    <ul>
-      <li><a href="index.html#servicios" class="mobile-link">Servicios</a></li>
-      <li><a href="index.html#nosotros" class="mobile-link">Nosotros</a></li>
-      <li><a href="index.html#blog" class="mobile-link">Blog</a></li>
-      <li><a href="index.html#contacto" class="mobile-link">Contacto</a></li>
-      <li><a href="productos.html" class="mobile-link">Productos</a></li>
-      <li><a href="#contacto" class="mobile-cta">Agendar Cita</a></li>
-    </ul>
+    <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú de navegación" aria-expanded="false">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
   </div>
 </header>
 
@@ -131,21 +110,73 @@
   </section>
 </main>
 
-<!-- FOOTER -->
-<footer class="site-footer" role="contentinfo">
-  <div class="footer-inner">
-    <div>
-      <p class="brand-small">EcoPetsCR</p>
-      <p class="muted">Clínica veterinaria ecológica · San José, Costa Rica</p>
-    </div>
-    <div class="footer-links">
-      <a href="#">Política de privacidad</a>
-      <a href="#">Términos</a>
-    </div>
-  </div>
-  <p class="copyright">&copy; 2025 EcoPetsCR — Todos los derechos reservados</p>
-</footer>
+<!-- ========================================
+         FOOTER: Pie de página
+         ======================================== -->
+    <footer>
+        <div class="footer-content">
+            <!-- Sección de información de la empresa -->
+            <div class="footer-section">
+                <h3>EcoPets CR</h3>
+                <p>Productos ecológicos y sostenibles para el cuidado de tus mascotas.</p>
+                <p>
+                    <span class="material-symbols-outlined" style="font-size: 1rem; vertical-align: middle;">eco</span>
+                    Cuida a tu mascota, cuida el planeta
+                </p>
+            </div>
+
+            <!-- Sección de enlaces rápidos -->
+            <div class="footer-section">
+                <h3>Enlaces Rápidos</h3>
+                <p><a href="index.html">Inicio</a></p>
+                <p><a href="nosotros.html">Nosotros</a></p>
+                <p><a href="blog.html">Blog</a></p>
+                <p><a href="contacto.html">Contacto</a></p>
+            </div>
+
+            <!-- Sección de información de contacto -->
+            <div class="footer-section">
+                <h3>Contacto</h3>
+                <p>
+                    <span class="material-symbols-outlined" style="font-size: 1rem; vertical-align: middle;">mail</span>
+                    info@ecopetscr.com
+                </p>
+                <p>
+                    <span class="material-symbols-outlined"
+                        style="font-size: 1rem; vertical-align: middle;">phone</span>
+                    +506 8888-9999
+                </p>
+                <p>
+                    <span class="material-symbols-outlined"
+                        style="font-size: 1rem; vertical-align: middle;">location_on</span>
+                    San José, Costa Rica
+                </p>
+            </div>
+
+            <!-- Sección de redes sociales -->
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/?locale=es_LA" aria-label="Facebook" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram" class="social-icon instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://X.com/" aria-label="X (Twitter)" class="social-icon twitter">
+                        <i class="fab fa-x-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Derechos de autor -->
+        <div class="footer-bottom">
+            <p>&copy; 2025 EcoPets CR | Todos los derechos reservados</p>
+        </div>
+    </footer>
 
 <script src="../js/producto-detalle.js" defer></script>
+<script src="../js/main.js" defer></script>
 </body>
 </html>
