--- a/productos.html
+++ b/productos.html
@@ -30,9 +30,10 @@
 
 
   <!-- NAV desktop -->
-  <nav class="main-nav">
+ <nav class="main-nav">
     <ul class="nav-list">
-      <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
+       <li><a href="index.html" class="nav-link">Inicio</a></li>
+      <li><a href="informacion.html" class="nav-link">Nosotros</a></li>
       <li><a href="blog.html" class="nav-link">Blog</a></li>
       <li><a href="contacto.html" class="nav-link">Contacto</a></li>
       <li><a href="productos.html" class="nav-link">Productos</a></li>
@@ -42,11 +43,11 @@
   </nav>
 
 
-
      <!-- Mobile nav (overlay) -->
     <div class="mobile-nav" id="mobileNav" aria-hidden="true">
      <ul>
-    <li><a href="#nosotros" class="mobile-link">Nosotros</a></li>
+    <li><a href="index.html" class="mobile-link">Inicio</a></li>
+    <li><a href="informacion.html" class="mobile-link">Nosotros</a></li>
     <li><a href="blog.html" class="mobile-link">Blog</a></li>
     <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
     <li><a href="productos.html" class="mobile-link">Productos</a></li>
@@ -89,36 +90,47 @@
   <!-- GRID DE PRODUCTOS -->
   <main class="container product-grid">
     <article class="product-card reveal" data-category="alimento">
-      <img src="images/producto1.jpg" alt="Producto 1" class="product-img">
+      <img src="images/p12345.jpg" alt="Producto 1" class="product-img">
       <h3>Alimento Orgánico</h3>
       <p>Nutrición completa y natural para tu perro o gato.</p>
       <span class="price">₡12,500</span>
-      <a href="#contacto" class="card-btn">Comprar</a>
+      <a href="producto_detalle.html" class="card-btn">Comprar</a>
     </article>
 
     <article class="product-card reveal" data-category="juguete">
-      <img src="images/producto2.jpg" alt="Producto 2" class="product-img">
+      <img src="images/j1.jpg" alt="Producto 2" class="product-img">
       <h3>Juguete Eco</h3>
       <p>Hecho de materiales reciclados y seguros para tu mascota.</p>
       <span class="price">₡5,800</span>
-      <a href="#contacto" class="card-btn">Comprar</a>
+      <a href="../Proyecto1-main/Productos-detalles/Producto-D2.html" class="card-btn">Comprar</a>
     </article>
 
     <article class="product-card reveal" data-category="cama">
-      <img src="images/producto3.jpg" alt="Producto 3" class="product-img">
+      <img src="images/C1.jpg" alt="Producto 3" class="product-img">
       <h3>Cama Natural</h3>
       <p>Con fibras orgánicas y diseño ergonómico.</p>
       <span class="price">₡18,300</span>
-      <a href="#contacto" class="card-btn">Comprar</a>
+      <a href="../Proyecto1-main/Productos-detalles/Producto-D3.html" class="card-btn">Comprar</a>
     </article>
 
     <article class="product-card reveal" data-category="accesorio">
-      <img src="images/producto4.jpg" alt="Producto 4" class="product-img">
+      <img src="images/CC1.jpg" alt="Producto 4" class="product-img">
       <h3>Collar de Cáñamo</h3>
       <p>Material ecológico, suave y resistente.</p>
       <span class="price">₡7,200</span>
-      <a href="#contacto" class="card-btn">Comprar</a>
+      <a href="../Proyecto1-main/Productos-detalles/Producto-D4.html" class="card-btn">Comprar</a>
     </article>
+
+
+     <article class="product-card reveal" data-category="accesorio">
+      <img src="images/CO1.jpg" alt="Producto 4" class="product-img">
+      <h3>Comederos Ecologicos</h3>
+      <p>Material ecológico, acero y resistente.</p>
+      <span class="price">₡8,200</span>
+      <a href="../Proyecto1-main/Productos-detalles/Producto-D5.html" class="card-btn">Comprar</a>
+    </article>
+
+
   </main>
 
   <!-- ========================================
