--- a/Productos-detalles/Producto-D5.html
+++ b/Productos-detalles/Producto-D5.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EcoPetsCR — Alimento Orgánico</title>
-  
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>EcoPetsCR — Comederos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/producto-detalle.css">
-  <link rel="stylesheet" href="../css/menu-hamburguesa.css">
 </head>
 <body>
 
@@ -18,7 +17,7 @@
   <div class="header-inner">
     <a href="index.html" class="brand" aria-label="EcoPetsCR — Inicio">
       <span class="brand-circle" aria-hidden="true">
-        <img src="images/logo.png" alt="Logo EcoPetsCR" class="brand-logo">
+        <img src="../images/logo.png" alt="Logo EcoPetsCR" class="brand-logo">
       </span>
       <span class="brand-text">EcoPetsCR</span>
     </a>
@@ -35,12 +34,24 @@
       </ul>
     </nav>
 
+    <!-- Mobile nav -->
+    <div class="mobile-nav" id="mobileNav" aria-hidden="true">
+      <ul>
+        <li><a href="index.html" class="mobile-link">Inicio</a></li>
+        <li><a href="nosotros.html" class="mobile-link">Nosotros</a></li>
+        <li><a href="blog.html" class="mobile-link">Blog</a></li>
+        <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
+        <li><a href="productos.html" class="mobile-link">Productos</a></li>
+        <li><a href="faq.html" class="mobile-link">Preguntas frecuentes</a></li>
+        <li><a href="acerca-de.html" class="mobile-link">Acerca de</a></li>
+      </ul>
+    </div>
+
     <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú de navegación" aria-expanded="false">
       <span class="material-symbols-outlined">menu</span>
     </button>
   </div>
 </header>
-
 
 <!-- MAIN PRODUCTO DETALLE -->
 <main class="producto-detalle">
@@ -48,34 +59,35 @@
   <section class="galeria">
     <div class="carrusel">
       <button class="prev">❮</button>
-      <img id="imagen-principal" src="images/blog1.jpg" alt="Alimento Orgánico">
+      <img id="imagen-principal" src="../images/CO1.jpg" alt="Comederos Eco">
       <button class="next">❯</button>
     </div>
     <div class="miniaturas">
-      <img src="images/blog1.jpg" class="thumb active" alt="Vista 1">
-      <img src="images/blog2.jpg" class="thumb" alt="Vista 2">
-      <img src="images/blog3.jpg" class="thumb" alt="Vista 3">
-      <img src="images/estetica.jpg" class="thumb" alt="Vista 4">
+      <img src="../images/CO1.jpg" class="thumb active" alt="Vista 1">
+      <img src="../images/CO12.jpg" class="thumb" alt="Vista 2">
+      <img src="../images/CO123.jpg" class="thumb" alt="Vista 3">
+      <img src="../images/CO1234.jpg" class="thumb" alt="Vista 4">
     </div>
   </section>
 
   <!-- INFORMACIÓN DEL PRODUCTO -->
   <section class="info">
-    <h1>Alimento Orgánico Premium</h1>
+    <h1>Comederos Ecológicos</h1>
     <p class="descripcion">
-      Alimento 100% natural con ingredientes orgánicos certificados, sin conservantes ni colorantes. 
-      Ideal para perros de todas las edades. Mejora la digestión, fortalece el pelaje y aporta energía de forma saludable.
+      Comederos resistentes fabricados con acero inoxidable y base ecológica antideslizante. 
+      Diseñados para brindar comodidad a tu mascota y fáciles de limpiar. 
+      Ideales para agua o alimento, disponibles en varios tamaños.
     </p>
 
     <ul class="beneficios">
-      <li>🌱 Ingredientes naturales</li>
-      <li>💚 Libre de químicos</li>
-      <li>🐕 Apto para todas las razas</li>
-      <li>🇨🇷 Producido en Costa Rica</li>
+      <li>🥣 Acero inoxidable duradero</li>
+      <li>🌱 Base ecológica antideslizante</li>
+      <li>🐾 Fácil de lavar y mantener</li>
+      <li>💧 Apto para agua y alimento</li>
     </ul>
 
     <div class="precio-box">
-      <span class="precio">₡12,500</span>
+      <span class="precio">₡8,200</span>
       <button id="agregarCarrito" class="btn-comprar">Agregar al carrito</button>
     </div>
 
@@ -88,21 +100,21 @@
       <h2>Productos relacionados</h2>
       <div class="grid">
         <article class="service-card reveal">
-          <img src="images/producto2.jpg" alt="Producto relacionado 1">
-          <h3>Producto relacionado 1</h3>
-          <p>Breve descripción del producto.</p>
+          <img src="../images/p12345.jpg" alt="Alimento Orgánico">
+          <h3>Alimento Orgánico</h3>
+          <p>Nutrición natural y completa, ideal para usar junto con los comederos.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="images/producto3.jpg" alt="Producto relacionado 2">
-          <h3>Producto relacionado 2</h3>
-          <p>Breve descripción del producto.</p>
+          <img src="../images/j1.jpg" alt="Juguete Eco">
+          <h3>Juguete Eco</h3>
+          <p>Perfecto para mantener a tu mascota activa después de la comida.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="images/producto4.jpg" alt="Producto relacionado 3">
-          <h3>Producto relacionado 3</h3>
-          <p>Breve descripción del producto.</p>
+          <img src="../images/CC1.jpg" alt="Collar de Cáñamo">
+          <h3>Collar de Cáñamo</h3>
+          <p>Complementa el cuidado de tu mascota con un accesorio ecológico y seguro.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
       </div>
@@ -110,73 +122,107 @@
   </section>
 </main>
 
-<!-- ========================================
-         FOOTER: Pie de página
-         ======================================== -->
-    <footer>
-        <div class="footer-content">
-            <!-- Sección de información de la empresa -->
-            <div class="footer-section">
-                <h3>EcoPets CR</h3>
-                <p>Productos ecológicos y sostenibles para el cuidado de tus mascotas.</p>
-                <p>
-                    <span class="material-symbols-outlined" style="font-size: 1rem; vertical-align: middle;">eco</span>
-                    Cuida a tu mascota, cuida el planeta
-                </p>
-            </div>
+<!-- COMENTARIOS Y CALIFICACIONES -->
+<section class="comentarios">
+  <div class="container">
+    <h2>Opiniones de clientes</h2>
 
-            <!-- Sección de enlaces rápidos -->
-            <div class="footer-section">
-                <h3>Enlaces Rápidos</h3>
-                <p><a href="index.html">Inicio</a></p>
-                <p><a href="nosotros.html">Nosotros</a></p>
-                <p><a href="blog.html">Blog</a></p>
-                <p><a href="contacto.html">Contacto</a></p>
-            </div>
+    <!-- Formulario -->
+    <form class="comentario-form">
+      <div class="form-group">
+        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
+      </div>
+      <div class="form-group">
+        <textarea id="comentario" name="comentario" rows="4" placeholder="Escribe tu experiencia..." required></textarea>
+      </div>
 
-            <!-- Sección de información de contacto -->
-            <div class="footer-section">
-                <h3>Contacto</h3>
-                <p>
-                    <span class="material-symbols-outlined" style="font-size: 1rem; vertical-align: middle;">mail</span>
-                    info@ecopetscr.com
-                </p>
-                <p>
-                    <span class="material-symbols-outlined"
-                        style="font-size: 1rem; vertical-align: middle;">phone</span>
-                    +506 8888-9999
-                </p>
-                <p>
-                    <span class="material-symbols-outlined"
-                        style="font-size: 1rem; vertical-align: middle;">location_on</span>
-                    San José, Costa Rica
-                </p>
-            </div>
+      <!-- Estrellas -->
+      <div class="rating">
+        <span class="star" data-value="1">★</span>
+        <span class="star" data-value="2">★</span>
+        <span class="star" data-value="3">★</span>
+        <span class="star" data-value="4">★</span>
+        <span class="star" data-value="5">★</span>
+      </div>
+      <input type="hidden" id="calificacion" name="calificacion" value="0">
 
-            <!-- Sección de redes sociales -->
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <div class="social-links">
-                    <a href="https://www.facebook.com/?locale=es_LA" aria-label="Facebook" class="social-icon facebook">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://www.instagram.com/" aria-label="Instagram" class="social-icon instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://X.com/" aria-label="X (Twitter)" class="social-icon twitter">
-                        <i class="fab fa-x-twitter"></i>
-                    </a>
-                </div>
-            </div>
+      <button type="submit" class="btn-comprar">Enviar</button>
+    </form>
+
+    <!-- Lista de comentarios -->
+    <div class="comentarios-lista">
+      <article class="comentario">
+        <div class="comentario-header">
+          <span class="icon">🐶</span>
+          <h4>Andrea Morales</h4>
+          <span class="estrellas">★★★★★</span>
         </div>
+        <p>Muy prácticos, fáciles de limpiar y mi perro ya no los mueve gracias a la base antideslizante.</p>
+      </article>
 
-        <!-- Derechos de autor -->
-        <div class="footer-bottom">
-            <p>&copy; 2025 EcoPets CR | Todos los derechos reservados</p>
+      <article class="comentario">
+        <div class="comentario-header">
+          <span class="icon">🐾</span>
+          <h4>José Ramírez</h4>
+          <span class="estrellas">★★★★☆</span>
         </div>
-    </footer>
+        <p>Me gusta mucho el diseño y que sean ecológicos, aunque podrían ser un poco más profundos.</p>
+      </article>
+
+      <article class="comentario">
+        <div class="comentario-header">
+          <span class="icon">🥣</span>
+          <h4>Camila Herrera</h4>
+          <span class="estrellas">★★★★★</span>
+        </div>
+        <p>Excelente compra, mis gatos lo usan tanto para comida como agua y se ven muy duraderos.</p>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <div class="footer-content">
+    <div class="footer-section">
+      <h3>EcoPets CR</h3>
+      <p>Productos ecológicos y sostenibles para el cuidado de tus mascotas.</p>
+      <p>
+        <span class="material-symbols-outlined">eco</span>
+        Cuida a tu mascota, cuida el planeta
+      </p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Enlaces Rápidos</h3>
+      <p><a href="index.html">Inicio</a></p>
+      <p><a href="nosotros.html">Nosotros</a></p>
+      <p><a href="blog.html">Blog</a></p>
+      <p><a href="contacto.html">Contacto</a></p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Contacto</h3>
+      <p><span class="material-symbols-outlined">mail</span> info@ecopetscr.com</p>
+      <p><span class="material-symbols-outlined">phone</span> +506 8888-9999</p>
+      <p><span class="material-symbols-outlined">location_on</span> San José, Costa Rica</p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Síguenos</h3>
+      <div class="social-links">
+        <a href="https://www.facebook.com/" aria-label="Facebook" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/" aria-label="Instagram" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://x.com/" aria-label="Twitter" class="social-icon twitter"><i class="fab fa-x-twitter"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 EcoPets CR | Todos los derechos reservados</p>
+  </div>
+</footer>
 
 <script src="../js/producto-detalle.js" defer></script>
-<script src="../js/main.js" defer></script>
 </body>
 </html>
