--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <!-- NAV desktop -->
   <nav class="main-nav">
     <ul class="nav-list">
-      <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
+       <li><a href="index.html" class="nav-link">Inicio</a></li>
+      <li><a href="informacion.html" class="nav-link">Nosotros</a></li>
       <li><a href="blog.html" class="nav-link">Blog</a></li>
       <li><a href="contacto.html" class="nav-link">Contacto</a></li>
       <li><a href="productos.html" class="nav-link">Productos</a></li>
@@ -45,7 +46,8 @@
     <!-- Mobile nav (overlay) -->
     <div class="mobile-nav" id="mobileNav" aria-hidden="true">
      <ul>
-    <li><a href="#nosotros" class="mobile-link">Nosotros</a></li>
+    <li><a href="index.html" class="mobile-link">Inicio</a></li>
+    <li><a href="informacion.html" class="mobile-link">Nosotros</a></li>
     <li><a href="blog.html" class="mobile-link">Blog</a></li>
     <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
     <li><a href="productos.html" class="mobile-link">Productos</a></li>
