--- a/Productos-detalles/Producto-D2.html
+++ b/Productos-detalles/Producto-D2.html
@@ -106,13 +106,13 @@
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp2.jpg" alt="Cuerda Natural">
+          <img src="../images/JUGUETE2.jpg" alt="Cuerda Natural">
           <h3>Cuerda Natural</h3>
           <p>Elaborada con fibras de cáñamo, perfecta para juegos de tirar y jalar.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp3.jpg" alt="Hueso Biodegradable">
+          <img src="../images/JUGUETE3_.jpg" alt="Hueso Biodegradable">
           <h3>Hueso Biodegradable</h3>
           <p>Entretenimiento seguro que además ayuda a la limpieza dental de tu mascota.</p>
           <a href="#" class="card-link">Ver más →</a>
