--- a/Productos-detalles/Producto-D3.html
+++ b/Productos-detalles/Producto-D3.html
@@ -100,19 +100,19 @@
       <h2>Productos relacionados</h2>
       <div class="grid">
         <article class="service-card reveal">
-          <img src="../images/adicionalp1.jpg" alt="Almohada Orgánica">
+          <img src="../images/cama1.jpg" alt="Almohada Orgánica">
           <h3>Almohada Orgánica</h3>
           <p>Perfecta para complementar la cama, hecha con fibras de algodón natural.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp2.jpg" alt="Manta Reciclada">
+          <img src="../images/cama2.jpg" alt="Manta Reciclada">
           <h3>Manta Reciclada</h3>
           <p>Confeccionada con textiles reciclados, brinda calor y confort a tu mascota.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp3.jpg" alt="Colchón Antiestrés">
+          <img src="../images/cama3.jpg" alt="Colchón Antiestrés">
           <h3>Colchón Antiestrés</h3>
           <p>Diseñado para relajar a tu mascota, con espuma ecológica de alta calidad.</p>
           <a href="#" class="card-link">Ver más →</a>
