--- a/Productos-detalles/Producto-D4.html
+++ b/Productos-detalles/Producto-D4.html
@@ -99,19 +99,19 @@
       <h2>Productos relacionados</h2>
       <div class="grid">
         <article class="service-card reveal">
-          <img src="../images/adicionalp1.jpg" alt="Correa de Yute">
+          <img src="../images/COLLAR1.jpg" alt="Correa de Yute">
           <h3>Correa de Yute</h3>
           <p>Complementa el collar con esta correa fuerte y ecológica hecha de yute natural.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp2.jpg" alt="Arnés Reciclado">
+          <img src="../images/COLLAR2.jpg" alt="Arnés Reciclado">
           <h3>Arnés Reciclado</h3>
           <p>Fabricado con materiales reciclados, ofrece seguridad y confort durante los paseos.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/adicionalp3.jpg" alt="Placa de Identificación de Bambú">
+          <img src="../images/COLLAR3.jpg" alt="Placa de Identificación de Bambú">
           <h3>Placa de Identificación de Bambú</h3>
           <p>Placa ligera y sostenible, personalizada para tu mascota con estilo natural.</p>
           <a href="#" class="card-link">Ver más →</a>
