--- a/Productos-detalles/Producto-D5.html
+++ b/Productos-detalles/Producto-D5.html
@@ -100,19 +100,19 @@
       <h2>Productos relacionados</h2>
       <div class="grid">
         <article class="service-card reveal">
-          <img src="../images/p12345.jpg" alt="Alimento Orgánico">
+          <img src="../images/comder1.jpg" alt="Alimento Orgánico">
           <h3>Alimento Orgánico</h3>
           <p>Nutrición natural y completa, ideal para usar junto con los comederos.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/j1.jpg" alt="Juguete Eco">
+          <img src="../images/comder2.jpg" alt="Juguete Eco">
           <h3>Juguete Eco</h3>
           <p>Perfecto para mantener a tu mascota activa después de la comida.</p>
           <a href="#" class="card-link">Ver más →</a>
         </article>
         <article class="service-card reveal">
-          <img src="../images/CC1.jpg" alt="Collar de Cáñamo">
+          <img src="../images/comder3.jpg" alt="Collar de Cáñamo">
           <h3>Collar de Cáñamo</h3>
           <p>Complementa el cuidado de tu mascota con un accesorio ecológico y seguro.</p>
           <a href="#" class="card-link">Ver más →</a>
