--- a/index.html
+++ b/index.html
@@ -136,6 +136,37 @@
       </div>
     </section>
 
+        <!-- VIDEO PRESENTACIÓN -->
+    <section id="video" class="section video-block reveal">
+      <div class="section-inner narrow">
+        <h2 class="section-title">Conócenos en 1 minuto</h2>
+        <p class="section-sub">Mira nuestro video de presentación</p>
+
+        <div class="video-wrapper">
+          <video controls preload="metadata" poster="images/logo.png">
+            <source src="video/EcoPets - Spot.mp4" type="video/mp4">
+            Tu navegador no soporta video HTML5.
+          </video>
+        </div>
+      </div>
+    </section>
+
+    <!-- EN HONOR -->
+    <section id="honor" class="section honor-block reveal">
+      <div class="section-inner narrow">
+        <h2 class="section-title">Un legado con amor</h2>
+        <p class="section-sub">Nuestra veterinaria fue creada en honor a quienes nos inspiran a cuidar de los animales con el corazón.</p>
+
+        <div class="honor-content">
+          <img src="images/lucky.jpg" alt="Perrito en honor" class="honor-img">
+          <div class="honor-text">
+            <p>EcoPetsCR nació en memoria de un fiel amigo peludo que nos enseñó el verdadero significado del amor, la lealtad y la importancia de cuidar a cada ser vivo.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <!-- BLOG (extractos) -->
     <section id="blog" class="section blog" role="region" aria-label="Blog">
       <div class="section-inner">
