--- a/producto_detalle.html
+++ b/producto_detalle.html
@@ -38,7 +38,7 @@
     <div class="mobile-nav" id="mobileNav" aria-hidden="true">
      <ul>
     <li><a href="index.html" class="mobile-link">Inicio</a></li>
-    <li><a href="#nosotros" class="mobile-link">Nosotros</a></li>
+    <li><a href="informacion.html" class="mobile-link">Nosotros</a></li>
     <li><a href="blog.html" class="mobile-link">Blog</a></li>
     <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
     <li><a href="productos.html" class="mobile-link">Productos</a></li>
