--- a/informacion.html
+++ b/informacion.html
@@ -20,46 +20,45 @@
 <body class="page-productos page-info"><!-- reutiliza scope .page-productos para heredar tu header/footer -->
 
   <!-- ================== HEADER (idéntico al index) ================== -->
-  <header class="site-header" role="banner">
-    <div class="header-inner">
-      <a href="index.html" class="brand" aria-label="EcoPetsCR — Inicio">
-        <span class="brand-circle" aria-hidden="true">
-          <img src="images/logo.png" alt="Logo EcoPetsCR" class="brand-logo">
-        </span>
-        <span class="brand-text">EcoPetsCR</span>
-      </a>
+  <<header class="site-header" role="banner">
+  <div class="header-inner">
+    <a href="index.html" class="brand" aria-label="EcoPetsCR — Inicio">
+      <span class="brand-circle" aria-hidden="true">
+        <img src="images/logo.png" alt="Logo EcoPetsCR" class="brand-logo">
+      </span>
+      <span class="brand-text">EcoPetsCR</span>
+    </a>
 
-      <nav class="main-nav">
-        <ul class="nav-list">
-          <li><a href="index.html" class="nav-link">Inicio</a></li>
-          <li><a href="informacion.html" class="nav-link active">Nosotros</a></li>
-          <li><a href="blog.html" class="nav-link">Blog</a></li>
-          <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-          <li><a href="productos.html" class="nav-link">Productos</a></li>
-          <li><a href="faq.html" class="nav-link">Preguntas frecuentes</a></li>
-          <li><a href="acerca-de.html" class="nav-link">Acerca de</a></li>
-        </ul>
-      </nav>
-
-      <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
-        <span class="material-symbols-outlined">menu</span>
-      </button>
-    </div>
-
-    <!-- Mobile nav -->
-    <div class="mobile-nav" id="mobileNav" aria-hidden="true">
-      <ul>
-        <li><a href="index.html" class="mobile-link">Inicio</a></li>
-        <li><a href="informacion.html" class="mobile-link active">Nosotros</a></li>
-        <li><a href="blog.html" class="mobile-link">Blog</a></li>
-        <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
-        <li><a href="productos.html" class="mobile-link">Productos</a></li>
-        <li><a href="faq.html" class="mobile-link">Preguntas frecuentes</a></li>
-        <li><a href="acerca-de.html" class="mobile-link">Acerca de</a></li>
-        <li><a href="index.html#contacto" class="mobile-cta">Agendar Cita</a></li>
+    <nav class="main-nav">
+      <ul class="nav-list">
+        <li><a href="index.html" class="nav-link">Inicio</a></li>
+        <li><a href="informacion.html" class="nav-link">Nosotros</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+        <li><a href="productos.html" class="nav-link">Productos</a></li>
+        <li><a href="faq.html" class="nav-link">Preguntas frecuentes</a></li>
+        <li><a href="acerca-de.html" class="nav-link">Acerca de</a></li>
       </ul>
-    </div>
-  </header>
+    </nav>
+
+    <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
+  </div>
+
+  <!-- Mobile nav (mismo en todas las páginas) -->
+  <div class="mobile-nav" id="mobileNav" aria-hidden="true">
+    <ul>
+      <li><a href="index.html" class="mobile-link">Inicio</a></li>
+      <li><a href="informacion.html" class="mobile-link">Nosotros</a></li>
+      <li><a href="blog.html" class="mobile-link">Blog</a></li>
+      <li><a href="contacto.html" class="mobile-link">Contacto</a></li>
+      <li><a href="productos.html" class="mobile-link">Productos</a></li>
+      <li><a href="faq.html" class="mobile-link">Preguntas frecuentes</a></li>
+      <li><a href="acerca-de.html" class="mobile-link">Acerca de</a></li>
+    </ul>
+  </div>
+</header>
 
   <!-- ================== CONTENIDO DE ESTA PÁGINA ================== -->
   <main class="info-main">
