--- a/vacunacion.html
+++ b/vacunacion.html
@@ -49,8 +49,8 @@
             <nav id="mainNav" role="navigation">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="blog.html" class="active">Blog</a></li>
+                    <li><a href="informacion.html">Nosotros</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="faq.html">Preguntas Frecuentes</a></li>
