--- a/acerca-de.html
+++ b/acerca-de.html
@@ -38,13 +38,13 @@
             <nav id="mainNav" role="navigation">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="informacion.html">Nosotros</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="faq.html">Preguntas Frecuentes</a></li>
                     <!-- Página actual marcada con clase "active" -->
-                    <li><a href="acerca-de.html" class="active">Acerca de</a></li>
+                    <li><a href="acerca-de.html">Acerca de</a></li>
                 </ul>
             </nav>
 
@@ -130,7 +130,7 @@
                 </div>
 
                 <!-- ========================================
-                     TARJETA DESARROLLADOR 2: Kendall Fernández
+                     TARJETA DESARROLLADOR 2: Kendall Fernández Rojas
                      ======================================== -->
                 <div class="developer-card">
                     <!-- Contenedor de la foto del desarrollador -->
@@ -139,7 +139,7 @@
                     </div>
                     
                     <!-- Nombre del desarrollador -->
-                    <h3 class="developer-name">Kendall Fernández</h3>
+                    <h3 class="developer-name">Kendall Fernández Rojas</h3>
                     
                     <!-- Información básica: Cédula y correo -->
                     <div class="developer-info">
