--- a/contacto.html
+++ b/contacto.html
@@ -44,10 +44,10 @@
             <nav id="mainNav" role="navigation">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="informacion.html">Nosotros</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <!-- Página actual marcada con clase "active" -->
-                    <li><a href="contacto.html" class="active">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="faq.html">Preguntas Frecuentes</a></li>
                     <li><a href="acerca-de.html">Acerca de</a></li>
