--- a/faq.html
+++ b/faq.html
@@ -36,12 +36,12 @@
             <nav id="mainNav" role="navigation">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="informacion.html">Nosotros</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <!-- Página actual marcada con clase "active" -->
-                    <li><a href="faq.html" class="active">Preguntas Frecuentes</a></li>
+                    <li><a href="faq.html">Preguntas Frecuentes</a></li>
                     <li><a href="acerca-de.html">Acerca de</a></li>
                 </ul>
             </nav>
