--- a/blog.html
+++ b/blog.html
@@ -336,7 +336,7 @@
                                         <span class="material-symbols-outlined">schedule</span> 6 min
                                     </span>
                                 </div>
-                                <a href="alimentacion-natural.html" class="btn btn-primary">
+                                <a href="alimentacion-natura.html" class="btn btn-primary">
                                     Leer más <span class="material-symbols-outlined">arrow_forward</span>
                                 </a>
                             </div>
@@ -368,7 +368,7 @@
              ======================================== -->
         <section class="all-articles-section">
             <h2 class="section-title">
-                <span class="material-symbols-outlined">description</span> 📚 Todos los Artículos
+                <span class="material-symbols-outlined">description</span> Todos los Artículos
             </h2>
 
             <!-- BARRA DE BÚSQUEDA NUEVA -->
@@ -567,7 +567,7 @@
                             <span class="article-date">
                                 <span class="material-symbols-outlined">calendar_today</span> 25 Sep 2025
                             </span>
-                            <a href="alimentacion-natural.html" class="read-more">
+                            <a href="alimentacion-natura.html" class="read-more">
                                 Leer más <span class="material-symbols-outlined">arrow_forward</span>
                             </a>
                         </div>
