--- a/vacunacion.html
+++ b/vacunacion.html
@@ -446,7 +446,7 @@
 
                     <!-- Artículo relacionado #1 -->
                     <div class="related-article" onclick="window.location.href='alimentacion-natural.html'">
-                        <img src="imagenes/alimentacion-natural.jpg" alt="Alimentación natural">
+                        <img src="imagenes/alimentacion-natural.png" alt="Alimentación natural">
                         <div class="related-content">
                             <h4>
                                 <span class="material-symbols-outlined" style="font-size: 1rem;">restaurant</span> 
