--- a/alimentacion-natura.html
+++ b/alimentacion-natura.html
@@ -559,7 +559,7 @@
                     <h3>Artículos Relacionados</h3>
 
                     <!-- Artículo relacionado #1 -->
-                    <div class="related-article" onclick="window.location.href='estres-mascotas.html'">
+                    <div class="related-article" onclick="window.location.href='reducir-estres-mascota.html'">
                         <img src="imagenes/mascota-estresada.jpg" alt="Reducir estrés en mascotas">
                         <div class="related-content">
                             <h4>
