--- a/dieta-barf.html
+++ b/dieta-barf.html
@@ -365,7 +365,7 @@
                     </div>
 
                     <!-- Artículo relacionado #2 -->
-                    <div class="related-article" onclick="window.location.href='estres-mascotas.html'">
+                    <div class="related-article" onclick="window.location.href='reducir-estres-mascota.html'">
                         <img src="imagenes/mascota-estresada.jpg" alt="Reducir estrés en mascotas">
                         <div class="related-content">
                             <h4>
