--- a/vacunacion.html
+++ b/vacunacion.html
@@ -445,7 +445,7 @@
                     <h3>Artículos Relacionados</h3>
 
                     <!-- Artículo relacionado #1 -->
-                    <div class="related-article" onclick="window.location.href='alimentacion-natural.html'">
+                    <div class="related-article" onclick="window.location.href='alimentacion-natura.html'">
                         <img src="imagenes/alimentacion-natural.png" alt="Alimentación natural">
                         <div class="related-content">
                             <h4>
@@ -457,7 +457,7 @@
                     </div>
 
                     <!-- Artículo relacionado #2 -->
-                    <div class="related-article" onclick="window.location.href='ejercicio-mascotas.html'">
+                    <div class="related-article" onclick="window.location.href='ejercicio.html'">
                         <img src="imagenes/perro-ejercicio.jpg" alt="Ejercicio físico">
                         <div class="related-content">
                             <h4>
